[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Gustavo/BulletEnemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/Shoot/Shoot_Frame1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Spritesheets/Enemies/WallTurret/Shoot/Shoot_Frame2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Spritesheets/Bullets/pop.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": false,
"name": "pop",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0998

[node name="BulletEnemy" type="Area2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_BulletEnemy_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
